[UPD] final changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,8 +128,19 @@
                             <i class="fs-4 bi-briefcase"></i>
                             <span class="ms-1 d-none d-sm-inline">Jobs</span>
                           </a>
-                      </li>
-                      
+                        </li>
+                      <li>
+                        <a href="{% url 'career-test' %}" class="nav-link py-2 px-0 align-middle">
+                          <i class="fs-4 bi-briefcase"></i>
+                          <span class="ms-1 d-none d-sm-inline">Career Test</span>
+                        </a>
+                    </li>
+                    <li>
+                      <a href="{% url 'careers' %}" class="nav-link py-2 px-0 align-middle">
+                        <i class="fs-4 bi-briefcase"></i>
+                        <span class="ms-1 d-none d-sm-inline">Career</span>
+                      </a>
+                  </li>
                         <li>
                           <a href="{% url 'startups' %}" class="nav-link py-2 px-0 align-middle">
                             <i class="fs-4 bi-building"></i>
